--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "sourceMap": true,
+    "noEmitOnError": true,
     "declaration": false
   },
   "include": ["src/**/*"],
